# ai-pokedex-scraper

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
config/: .env.example  logging.yaml
scripts/: create_kb.py  s.py
src/pokedex_scraper/: __init__.py  __main__.py  items.py  pipelines.py  settings.py
src/pokedex_scraper/chunking/: chunker.py
src/pokedex_scraper/ingestion/: gemini_test.py  ingestor.py
src/pokedex_scraper/spiders/: pokedex_spider.py
src/pokedex_scraper/utils/: logging.py
