[project]
name = "pokedex-scraper"
version = "0.1.0"
description = ""
authors = [
    {name = "WoutVossen",email = "vossen.w@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "scrapy (>=2.13.0,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "markdownify (>=1.1.0,<2.0.0)",
    "google-genai (>=1.15.0,<2.0.0)",
    "langchain-text-splitters (>=0.3.8,<0.4.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pymilvus (>=2.5.8,<3.0.0)"
]

[tool.ruff]
line-length = 120
target-version = "py310"
select = [
    "ALL",
]
ignore = [
    "ANN", 
    "COM",
    "C90", 
    "DJ",  
    "EXE", 
    "T10", 
    "TID", 
    "D100",  
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",
    "D205",
    "D212",
    "D400",
    "D401",
    "D415",
    "E402",  
    "E501",  
    "TRY003", 
    "G004",
    "PTH123",
    "INP001",
    "TRY400",
    "EM102",
    "B008",
    "BLE001",
    "D203",
    "PLR0913",
    "EM101",
    "PD011",
    "S104",
]


[tool.poetry]
packages = [{include = "pokedex_scraper", from = "src"}]


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

